# social-hook

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  pyproject.toml  release-please-config.json
.claude/agents/: maintenance-loop.md
.claude/loops/: docs-maintenance.yml
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pr-title.yml  publish.yml  release-please.yml
docs/: 404.html  CODING_PRACTICES.md  REUSABILITY.md  TECHNICAL_ARCHITECTURE.md  index.html  index.md  sitemap.xml  workbench-architecture.html
docs/DOC_STATUS/: index.html
docs/cli/: bot.md  config.md  decision.md  draft.md  index.html  index.md  manual.md  media.md  memory.md  project.md  root-commands.md
docs/cli/account/: index.html
docs/cli/advisory/: index.html
docs/cli/arc/: index.html
docs/cli/bot/: index.html
docs/cli/brief/: index.html
docs/cli/config/: index.html
docs/cli/content/: index.html
docs/cli/credentials/: index.html
docs/cli/cycles/: index.html
docs/cli/decision/: index.html
docs/cli/draft/: index.html
docs/cli/inspect/: index.html
docs/cli/journey/: index.html
docs/cli/logs/: index.html
docs/cli/manual/: index.html
docs/cli/media/: index.html
docs/cli/memory/: index.html
docs/cli/project/: index.html
docs/cli/root-commands/: index.html
docs/cli/snapshot/: index.html
docs/cli/strategy/: index.html
docs/cli/topics/: index.html
docs/concepts/: index.html
docs/concepts/media-generation/: index.html
docs/concepts/narrative-arcs/: index.html
docs/concepts/pipeline/: index.html
docs/concepts/voice-memory/: index.html
docs/configuration/: config.md  content-config.md  social-context.md
docs/configuration/config/: index.html
docs/configuration/content-config/: index.html
docs/configuration/social-context/: index.html
docs/getting-started/: installation.md  quickstart.md
docs/getting-started/installation/: index.html
docs/getting-started/quickstart/: index.html
docs/search/: search_index.json
examples/: content-config.example.yaml  social-context.example.md
frontpages/: 04-wire-protocol.html
scripts/: e2e_test.py  generate_cli_docs.py  mkdocs_hooks.py  oauth2_setup.py  seed_rate_limits_demo.py  test-countdown.sh  verify_narrative.py  verify_ws2.py  verify_ws3_adapters.py  verify_ws4.py
scripts/e2e/: constants.py  harness.py  main.py  runner.py  vcr_config.py
scripts/e2e/helpers/: decisions.py  events.py  interactive.py  snapshots.py  time_travel.py
scripts/e2e/sections/: __init__.py  bot_buttons.py  bot_commands.py  cli.py  crosscutting.py  crosspost.py  draft_lifecycle.py  gatekeeper.py  git_hooks.py  journey.py  multi_provider.py  narrative.py  onboarding.py  pipeline.py  platform_posting.py  queue.py  rate_limits.py  scheduler.py  setup_validation.py  vehicles.py  web_dashboard.py
site/: index.html
site-docs/: DOC_STATUS.md
site-docs/cli/: account.md  advisory.md  arc.md  bot.md  brief.md  config.md  content.md  credentials.md  cycles.md  decision.md  draft.md  index.md  inspect.md  journey.md  logs.md  manual.md  media.md  memory.md  project.md  root-commands.md  snapshot.md  strategy.md  system.md  target.md  topics.md
site-docs/concepts/: index.md  media-generation.md  narrative-arcs.md  pipeline.md  voice-memory.md
site-docs/configuration/: config.md  content-config.md
site-docs/getting-started/: installation.md  quickstart.md
src/: CHANGELOG.md
src/social_hook/: __init__.py  __main__.py  compat.py  consolidation.py  constants.py  content_sources.py  diagnostics.py  draft_diagnostics.py  drafting.py  drafting_intents.py  dry_run.py  error_feed.py  errors.py  file_reader.py  filesystem.py  import_commits.py  intro_lifecycle.py  logging.py  media_regen.py  media_tokens.py  migrations.py  notifications.py  oauth_pkce.py  parsing.py  pipeline_diagnostics.py  rate_limits.py  registry.py  routing.py  scheduler.py  scheduling.py  suggestions.py  terminal.py  topics.py  trigger.py  trigger_batch.py  trigger_context.py  trigger_decisions.py  trigger_git.py  trigger_secondary.py  trigger_side_effects.py  (+2 more)
src/social_hook/adapters/: __init__.py  auth.py  dry_run.py  models.py  rate_limit.py  registry.py
src/social_hook/bot/: __init__.py  buttons.py  commands.py  daemon.py  notifications.py  process.py  runner.py
src/social_hook/cli/: __init__.py  _spinner.py  account.py  advisory.py  arc.py  brief.py  config.py  content.py  credentials.py  cycles.py  decision.py  draft.py  events.py  inspect.py  journey.py  logs.py  manual.py  media.py  memory.py  project.py  quickstart.py  rate_limits.py  setup.py  snapshot.py  strategy.py  system.py  target.py  test_cmd.py  (+2 more)
tests/: __init__.py  conftest.py  test_adapter_registry.py  test_adapters_auth.py  test_adapters_dry_run.py  test_adapters_linkedin.py  test_adapters_mermaid.py  test_adapters_models.py  test_adapters_nanabananapro.py  test_adapters_platform_factory.py  test_adapters_playwright.py  test_adapters_rate_limit.py  test_adapters_rayso.py  test_adapters_registry.py  test_adapters_x.py  test_advisory.py  test_analyzer.py  test_api_connect.py  test_api_targets.py  test_arc_activation.py  test_arc_cli.py  test_arcs_targets.py  test_bot_buttons.py  test_bot_commands.py  test_bot_daemon.py  test_bot_notifications.py  test_bot_process.py  test_brand_primary_operations.py  test_brand_primary_template.py  test_brief.py  test_catalog.py  test_chunk6_overrides.py  test_claude_cli_client.py  test_cli.py  test_cli_account.py  test_cli_content.py  test_cli_credentials.py  test_cli_draft.py  test_cli_logs.py  test_cli_rate_limits.py  (+117 more)
tests/cli/: test_narrative_cmd.py
tests/config/: test_yaml_narrative.py
tests/llm/: test_prompts_narrative.py
tests/narrative/: test_extractor.py  test_storage.py  test_transcript.py
tests/setup/: test_install_narrative.py  test_wizard_narrative.py
web/: next.config.ts  package-lock.json  package.json
(+231 files in other folders)
