[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-hook"
version = "0.2.0"
description = "Automated social media content from development activity"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Neil", email = "26359601+nj-io@users.noreply.github.com" }
]
keywords = ["social-media", "automation", "cli", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Internet",
]
dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
    "InquirerPy>=0.3.4",
    "rich>=13.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
media = [
    "playwright>=1.40.0",
]
multi-provider = ["openai>=1.0.0"]
slack = ["slack-bolt>=1.18.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
social-hook = "social_hook.cli:app"

[project.urls]
Homepage = "https://github.com/nj-io/social-hook"
Documentation = "https://github.com/nj-io/social-hook#readme"
Repository = "https://github.com/nj-io/social-hook"
Issues = "https://github.com/nj-io/social-hook/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/social_hook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]  # Line length handled by formatter

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
