[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "social-hook"
version = "0.2.0"
description = "Automated social media content from development activity"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Neil", email = "26359601+nj-io@users.noreply.github.com" }
]
keywords = ["social-media", "automation", "cli", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Internet",
]
dependencies = [
    "typer[all]>=0.9.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "requests>=2.28.0",
    "requests-oauthlib>=1.3.0",
    "InquirerPy>=0.3.4",
    "rich>=13.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
media = [
    "playwright>=1.40.0",
]
multi-provider = ["openai>=1.0.0"]
slack = ["slack-bolt>=1.18.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.15,<0.16",
    "mypy>=1.15,<1.16",
    "pre-commit>=3.0",
    "types-PyYAML>=6.0",
    "types-requests>=2.28",
]

[project.scripts]
social-hook = "social_hook.cli:app"

[project.urls]
Homepage = "https://github.com/nj-io/social-hook"
Documentation = "https://github.com/nj-io/social-hook#readme"
Repository = "https://github.com/nj-io/social-hook"
Issues = "https://github.com/nj-io/social-hook/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/social_hook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]  # E501: line length handled by formatter; B008: typer.Option()/FastAPI Body() in defaults is intentional

[tool.ruff.lint.per-file-ignores]
"src/social_hook/cli/__init__.py" = ["E402"]
"src/social_hook/llm/prompts.py" = ["E402"]
"src/social_hook/db/operations.py" = ["E402"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
